- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    5.11.0 Alpha
 - 
    None
 
- 
        cf35bc21c080987691c64179d572bc403a8978c1
 
Probably caused by 9e99dba4a22bbf212b3e6d1e2607a16dbbd04d90.
To reproduce, start the widgets/richtext/textedit example on Windows. EUDC will be displayed in the font selection combo box. Ideally, this font should be invisible to the user, at least it should not be the default anywhere.
Note that this will only happen if you have actually added EUDC glyphs.